# pytest-cprobe

./: .gitignore  LICENSE  README.md  debug_sanitizer.py  example_test.py  pyproject.toml  sanitizer_example.py
src/pytest_cprobe/: __init__.py  compiler.py  crash_analyzer.py  plugin.py  runner.py  sanitizers.py
src/pytest_cprobe.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: __init__.py  conftest.py  test_basic_functionality.py  test_crash_analysis.py  test_examples.py  test_sanitizers.py
